# nano-looper

./: .gitignore  .gitmodules  CMakeLists.txt  DESIGN.md  README.md  build.sh  run_tests.sh
mock_server/: requirements.txt  resolume_mock.py  test_resolume_mock.py
mock_server/fixtures/: resolume-ws-initial-state.json
src/looper/: core.cpp  core.h
src/plugin/: channel_tag_plugin.cpp  channel_tag_plugin.h  looper_plugin.cpp  looper_plugin.h  overlay_renderer.cpp  overlay_renderer.h  text_renderer.h  text_renderer.mm  utf8.h
src/resolume/: composition.cpp  composition.h  protocol.cpp  protocol.h  ws_client.cpp  ws_client.h
tests/: test_composition.cpp  test_looper_core.cpp  test_utf8.cpp  test_ws_client.cpp
tools/: looper_cli.cpp  testme.cpp
tools/harness/: main.mm
